lab1/Test/L1-A-13-99.output
Error Type A at Line 8
Error Type B at Line 10
Error Type B at Line 10
Error Type B at Line 20
Error Type B at Line 31
Error Type B at Line 41
Error Type B at Line 46
Error Type A at Line 58
